# klygo

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: SETUP_GUIDE.md  build_wheels.yml
cpp/: CMakeLists.txt
cpp/include/klygo/: allocator.h  cpu_allocator.h  cuda_allocator.h  cuda_kernels.h  device.h  dtype.h  storage.h  tensor.h  tensor_factory.h  tensor_impl.h  tensor_printer.h
cpp/python/: binding.cpp
cpp/src/: cpu_allocator.cpp  cuda_kernels.cu  storage.cpp  tensor.cpp  tensor_factory.cpp  tensor_impl.cpp  tensor_printer.cpp
cpp/test/: tensor_01.cpp  tensor_02.cpp  tensor_03.cpp  tensor_04.cpp  tensor_05.cpp  tensor_06.cpp  tensor_07.cpp  tensor_08.cpp
cpp/test_py/: test.py  test_full_pytorch_suite.py  test_new_factories.py  test_ops.py  test_parallel.py
data/: exported_config.toml
docs/: README.md
docs/archive/: README.md
docs/datasets/: README.md
docs/io/: README.md
docs/models/: README.md
docs/utils/: README.md
docs/validators/: README.md
docs/visualize/: README.md
klygo/: __init__.py
klygo/archive/: __init__.py  _utils.py  compress.py  extract.py  human_size.py  info.py  list.py  modify.py  transform.py
klygo/datasets/: __init__.py  _utils.py  info.py  merge.py  partition.py  remap.py  split.py
klygo/io/: __init__.py  config.py  read.py  read_images.py  write.py
klygo/models/: __init__.py  kernel.py  model.py
klygo/utils/: _crop_boxes.py  _make_image_grid.py  _read_yolo_boxes.py  _save_crops.py  media.py
klygo/validators/: __init__.py  type_validator.py
klygo/validators/archive/: __init__.py  validators.py
klygo/validators/datasets/: __init__.py  validators.py
klygo/validators/io/: __init__.py  validators.py
klygo/validators/models/: __init__.py  validators.py
klygo/visualize/: __init__.py  crop_dataset.py  crop_image.py  crop_objects.py  draw.py  draw_bboxes.py  plot_dataset_stats.py  read_cropped_objects.py  read_crops.py  read_detections.py  show_image.py  visualize_dataset_image.py  visualize_prediction.py
test/: io_test.py  test_public_api.py
test/archive/: archive.py  test_archive.py
test/datasets/: test_info.py  test_merge.py  test_partition.py  test_remap.py  test_split.py  test_utils.py
test/globals/: test.py
test/io/: test_io.py
test/visualize/: test_visualize.py
