[project]
name = "klygo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
    "opencv-python>=5.0.0.93",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "python-box>=7.4.1",
    "pyyaml>=6.0.3",
    "ruamel-yaml>=0.19.1",
    "tomlkit>=0.15.0",
    "torch>=2.13.0",
    "tqdm>=4.68.4",
    "transformers>=5.13.0",
]
