[build-system]
requires = ["setuptools>=68", "wheel", "pybind11>=3.0.4"]
build-backend = "setuptools.build_meta"

[project]
name = "klygo"
version = "2.0.3"
description = "Python utilities for archive, config and zero-shot detection"
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
    "numpy>=2.0",
    "opencv-python>=4.10",
    "pillow>=11.0",
    "pydantic>=2.0",
    "python-box>=7.0",
    "pyyaml>=6.0",
    "ruamel-yaml>=0.18",
    "tomlkit>=0.13",
    "torch>=2.7,<3.0",
    "tqdm>=4.66",
    "transformers>=4.50,<6.0",
    "matplotlib>=3.5",
    "pybind11>=3.0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["klygo*"]
exclude = ["data*", "docs*", "test*"]
namespaces = false
